tests/baselines/reference/objectTypesIdentityWithPublics.errors.txt
==== tests/cases/compiler/objectTypesIdentityWithPublics.ts (17 errors) ====
    // object types are identical structurally
    
    class A {
        public foo: string;
    }
    
    class B {
        public foo: string;
    }
    
    class C<T> {
        public foo: T;
    }
    
    interface I {
        foo: string;
    }
    
    var a: { foo: string; }
    var b = { foo: '' };
    
    function foo1(x: A);
    function foo1(x: A); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(23,1): error TS2144: Duplicate overload signature for 'foo1'.
    function foo1(x: any) { }
    
    function foo1b(x: B);
    function foo1b(x: B); // error
    ~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(27,1): error TS2144: Duplicate overload signature for 'foo1b'.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string>);
    function foo1c(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(31,1): error TS2144: Duplicate overload signature for 'foo1c'.
    function foo1c(x: any) { }
    
    function foo2(x: I);
    function foo2(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(35,1): error TS2144: Duplicate overload signature for 'foo2'.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
    function foo3(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(39,1): error TS2144: Duplicate overload signature for 'foo3'.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
    function foo4(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(43,1): error TS2144: Duplicate overload signature for 'foo4'.
    function foo4(x: any) { }
    
    function foo5(x: A);
    function foo5(x: B); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(47,1): error TS2144: Duplicate overload signature for 'foo5'.
    function foo5(x: any) { }
    
    function foo5b(x: A);
    function foo5b(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(51,1): error TS2144: Duplicate overload signature for 'foo5b'.
    function foo5b(x: any) { }
    
    function foo6(x: A);
    function foo6(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(55,1): error TS2144: Duplicate overload signature for 'foo6'.
    function foo6(x: any) { }
    
    function foo7(x: A);
    function foo7(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(59,1): error TS2144: Duplicate overload signature for 'foo7'.
    function foo7(x: any) { }
    
    function foo8(x: B);
    function foo8(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(63,1): error TS2144: Duplicate overload signature for 'foo8'.
    function foo8(x: any) { }
    
    function foo9(x: B);
    function foo9(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(67,1): error TS2144: Duplicate overload signature for 'foo9'.
    function foo9(x: any) { }
    
    function foo10(x: B);
    function foo10(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(71,1): error TS2144: Duplicate overload signature for 'foo10'.
    function foo10(x: any) { }
    
    function foo11(x: B);
    function foo11(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(75,1): error TS2144: Duplicate overload signature for 'foo11'.
    function foo11(x: any) { }
    
    function foo12(x: I);
    function foo12(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(79,1): error TS2144: Duplicate overload signature for 'foo12'.
    function foo12(x: any) { }
    
    function foo13(x: I);
    function foo13(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(83,1): error TS2144: Duplicate overload signature for 'foo13'.
    function foo13(x: any) { }
    
    function foo14(x: I);
    function foo14(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithPublics.ts(87,1): error TS2144: Duplicate overload signature for 'foo14'.
    function foo14(x: any) { }